Fix margin header collapsable

--- a/src/scss/components/_collapsable-header.scss
+++ b/src/scss/components/_collapsable-header.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: space-between;
   padding-top: 10px;
+  margin: 0 20px 0 20px;
 }
 .fa-collapsable {
   width: 16px;
