--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -8,6 +8,9 @@
   align-items: center;
   border-top: 1px solid $color-line;
   margin: 0 20px 0 20px;
+  @media all and (min-width: 768px) {
+    margin: 0;
+  }
 }
 // display: flex;
 // margin: 10px 20px 0;
